# virtualMachineInC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
apps/asm/: main.cpp
apps/gui/: GuiApp.cpp  GuiApp.hpp  main.cpp
apps/vm/: main.cpp
docs/: API.md  ARCHITECTURE.md  ISA.md  PROJECT_STRUCTURE.md
examples/: branch_and_loop.asm  call_and_ret.asm  comprehensive_test.asm  mmio_print.asm  print_number.asm
include/simplevm/: opcodes.hpp  types.hpp  vm.hpp
include/vm/: Bus.hpp  CPU.hpp  Config.hpp  ConsoleCapture.hpp  ConsoleDevice.hpp  Decoder.hpp  Device.hpp  Instance.hpp  Logger.hpp  Memory.hpp  Opcodes.hpp  ProgramLoader.hpp  Types.hpp  VM.hpp
src/: Bus.cpp  CPU.cpp  ConsoleDevice.cpp  Decoder.cpp  Instance.cpp  main.cpp  vm.cpp
tests/: test_vm.cpp
